# SynthBanshee

./: .agent-plan.md  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  llms.txt  pyproject.toml  splendor.yaml
.claude/commands/: review-pr.md
.claude/skills/: open-feature-pr.md  resolve-pr-threads.md
.github/workflows/: ci.yml  live-tts.yml  pr-agent-context-refresh.yml
avdp/: cli.py
avdp/augment/: __init__.py  preprocessing.py
avdp/config/: __init__.py  acoustic_config.py  scene_config.py  speaker_config.py  taxonomy.py
avdp/labels/: __init__.py  generator.py  schema.py
avdp/package/: __init__.py  validator.py
avdp/tts/: __init__.py  azure_provider.py  renderer.py
configs/: taxonomy.yaml
configs/examples/: scene_elephant_SV_example.yaml  scene_she_proves_IT_example.yaml  scene_tier_c_confusor_example.yaml  speaker_AGG_M_30-45_001.yaml  speaker_AGG_M_30-45_002.yaml  speaker_BEN_M_40-55_003.yaml  speaker_BYS_F_6-10_001.yaml  speaker_SW_F_30-45_001.yaml  speaker_VIC_F_25-40_002.yaml  speaker_VIC_F_25-40_003.yaml
configs/run_configs/: profile_elephant.yaml  profile_she_proves.yaml  tier_a_500_elephant.yaml  tier_a_500_she_proves.yaml  tier_b_1000_elephant.yaml  tier_b_1000_she_proves.yaml  tier_c_500_elephant.yaml  tier_c_500_she_proves.yaml
configs/scenes/: test_scene_001.yaml
configs/speakers/: speaker_AGG_M_30-45_003.yaml  speaker_BEN_M_40-55_004.yaml  speaker_BEN_M_40-55_005.yaml  speaker_SW_F_30-45_002.yaml  speaker_SW_F_30-45_003.yaml  speaker_VIC_F_25-40_004.yaml
docs/: audio_generation_v2_design.md  audio_generation_v3_design.md  audio_quality_feedback.md  audio_quality_review_prompt.md  audio_violence_datasdet_project_docs.md  audio_violence_feasibility_chat.txt  automated_eval_design.md  design_approaches.md  implementation_plan.md  m17_phase_a_validation_report.md  m17_phase_c_validation_report.md  spec.md  synthbanshee_v2_feedback_for_claude_by_chatgpt.md  wet_testing_plan.md
docs/debug_run_1/: audio_quality_review_prompt.md  llm_feedbacks.md
docs/research/: research_report_gemini.md  research_report_gpt-5.2-thinking.md  research_report_gpt55_pro.md
memory/: MEMORY.md  project_phase0_status.md  project_venv.md
planning/tasks/: task-review-src-0032ce484c-src-65d8bddad0-0588797e2a.md  task-review-src-128c158e90-src-5539b824c2-7897667674.md  task-review-src-128c158e90-src-5539b824c2-da8d005984.md  task-review-src-128c158e90-src-65d8bddad0-c0f49c880e.md  task-review-src-128c158e90-src-65d8bddad0-d446c3fa67.md  task-review-src-128c158e90-src-9cf0b398f3-f71e39867f.md  task-review-src-128c158e90-src-c5bf85592f-34f754338d.md  task-review-src-3f021eceae-src-42711de5f7-39c9bd6713.md  task-review-src-3f021eceae-src-5539b824c2-29c6943cc6.md  task-review-src-3f021eceae-src-5539b824c2-8955dac18c.md  task-review-src-3f021eceae-src-5539b824c2-921d90b773.md  task-review-src-3f021eceae-src-65d8bddad0-79b050d937.md  task-review-src-42711de5f7-src-5539b824c2-c9f9840742.md  task-review-src-42711de5f7-src-55f44e8ca0-9630c13d49.md  task-review-src-42711de5f7-src-5711642b82-543bcb7cb0.md  task-review-src-42711de5f7-src-6fd3cc5a71-8b5fb7eb03.md  task-review-src-42711de5f7-src-7ab4089cd5-d06770b47e.md  task-review-src-42711de5f7-src-9d9759e5ad-15f25bdfcb.md  task-review-src-42711de5f7-src-fa470db101-1909644a71.md  task-review-src-5539b824c2-src-b98ddf4495-267a9a75cd.md  task-review-src-5539b824c2-src-c5bf85592f-a2be925049.md  task-review-src-5539b824c2-src-d7392e10f9-1e5b712244.md  task-review-src-55f44e8ca0-src-5711642b82-27085b9cff.md  task-review-src-55f44e8ca0-src-9cf0b398f3-80ffd58d39.md  task-review-src-55f44e8ca0-src-b98ddf4495-025427d63d.md  task-review-src-55f44e8ca0-src-fa470db101-60c5e08f6a.md  task-review-src-5711642b82-src-c5bf85592f-f43cf7a212.md  task-review-src-7ab4089cd5-src-9d9759e5ad-511cf4d07a.md  task-review-src-7ab4089cd5-src-c5bf85592f-53b9157693.md  task-review-src-9cf0b398f3-src-9d9759e5ad-73a0b45659.md  task-review-src-9cf0b398f3-src-a24ad6e5d1-c0d0879d8f.md  task-review-src-9cf0b398f3-src-c5bf85592f-fdad452e95.md  task-review-src-9d9759e5ad-src-a24ad6e5d1-2369b20a81.md  task-review-src-9d9759e5ad-src-c5bf85592f-e1c63b305b.md  task-review-src-b98ddf4495-src-ca5e04add8-95276a8998.md  task-review-src-b98ddf4495-src-d7392e10f9-07f317bcde.md
scripts/: check_google_voices.py  m17_phase_a_validation.py  m17_phase_c_validation.py
state/queue/: ingest-src-479a00613662927946fa0db8db13e518a76abe07b72a67fdd0e33d145037fee1.json  ingest-src-918c2a26f0714efc5be9752f201d42606dd36421d78ebcddfff4cc995687c21e.json  ingest-src-a1045d5673b5f9bcc063e16fc2c35f7ee9724147bf13a457c03cf26afb237dab.json  ingest-src-c6982fa7beb5f328926108b51f5e69aeeaffe0cbf06c031ed050387722751ed4.json  ingest-src-ca5e04add8743f4c4164800a3aeb368d0be73be97042f9c379ee55cad023e721.json  ingest-src-d1be9adac6401711e3ca3e4da37738b69acbb55d97386931a14fa871dda4117e.json
state/runs/: run-src-479a00613662927946fa0db8db13e518a76abe07b72a67fdd0e33d145037fee1-20260414T081611687293Z.json  run-src-918c2a26f0714efc5be9752f201d42606dd36421d78ebcddfff4cc995687c21e-20260414T081611606884Z.json  run-src-a1045d5673b5f9bcc063e16fc2c35f7ee9724147bf13a457c03cf26afb237dab-20260414T081604124545Z.json  run-src-c6982fa7beb5f328926108b51f5e69aeeaffe0cbf06c031ed050387722751ed4-20260414T081611358907Z.json  run-src-ca5e04add8743f4c4164800a3aeb368d0be73be97042f9c379ee55cad023e721-20260414T081611445095Z.json  run-src-d1be9adac6401711e3ca3e4da37738b69acbb55d97386931a14fa871dda4117e-20260414T081611526097Z.json
synthbanshee/: __init__.py  cli.py
synthbanshee/augment/: __init__.py  device_profiles.py  noise_mixer.py  pipeline.py  preprocessing.py  room_sim.py  types.py  voice_texture.py
tests/: conftest.py
wiki/: index.md  log.md
(+250 files in other folders)
